# Interpretador-de-Minipar

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
examples/: 1um.minipar  2dois.minipar  3tres.minipar  3tres.minipar.temp  4quatro.minipar  4quatro.minipar.temp  5cinco.minipar  5cinco.minipar.temp  6seis.minipar  6seis.minipar.temp  client.minipar  server.minipar
minipar/: __init__.py  __main__.py  ast.py  error.py  executor.py  lexer.py  parser.py  preprocessor.py  semantic.py  symtable.py  token.py
